fixing hover bug

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ opacity: 0;
  
 }
 
-.container:hover .overlay {
+.container-overlay:hover .overlay {
   margin-left: 24px;
  
 margin-top: 16px;
@@ -233,7 +233,7 @@ border-radius: 8px;
 cursor: pointer;
 
 }
-.container:hover .icon {
+.container-overlay:hover .icon {
 opacity: 1;
 cursor: pointer;
 }
